--- a/zmrocze-tidal.cabal
+++ b/zmrocze-tidal.cabal
@@ -68,7 +68,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.17.2.1
+    build-depends:    base ==4.16.4.0
 
     -- Directories containing source files.
     hs-source-dirs:   src
@@ -91,8 +91,8 @@ executable zmrocze-tidal
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base ^>=4.17.2.1,
-        zmrocze-tidal
+        , base ==4.16.4.0
+        , zmrocze-tidal
 
     -- Directories containing source files.
     hs-source-dirs:   app
