--- a/zmrocze-tidal.cabal
+++ b/zmrocze-tidal.cabal
@@ -68,7 +68,9 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ==4.16.4.0
+    build-depends:
+        , base == 4.16.4.0
+        , tidal == 1.9.5
 
     -- Directories containing source files.
     hs-source-dirs:   src
